# RAG_Chatbot

./: .gitignore  app.py  pyproject.toml
.chainlit/: config.toml
backend/: config.py  data_layer.py  database.py  document_loader.py  document_splitter.py  embedding.py  indexer.py  llm.py  main.py  rag.py  reranker.py  retriever.py  vector_store_manager.py
backend/chains/: message_history.py  rag_basic.py  rag_with_history.py
backend/routers/auth/: authentication_routes.py  user_management.py  users_tables.sql
backend/routers/indexer/: index.py
config/: config.yaml
data/chroma_db/: chroma.sqlite3
data/record_manager/: record_manager_cache.sql
frontend/: frontend.py
