[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "bcrypt==4.0.1",
    "chainlit>=2.10.0",
    "cohere>=5.20.7",
    "dbutils>=3.1.2",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "google-genai>=1.66.0",
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-cohere>=0.5.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.10",
    "langchain-text-splitters>=1.1.1",
    "langserve[all]>=0.3.3",
    "loguru>=0.7.3",
    "omegaconf>=2.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pypdf>=6.7.3",
    "python-jose[cryptography]>=3.5.0",
    "sentence-transformers>=5.2.3",
    "sqlglot>=29.0.1",
    "uvicorn>=0.41.0",
]
